# iCloud

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  agents.md  macos-launcher.command  pyproject.toml
data/: mock_accounts.json  mock_icloud.json
fixtures/demo_backup/: info.txt
fixtures/mobilesync_demo/0000000000000000/: Info.plist  Manifest.db
src/icloud_multi_agent/: __init__.py  cli.py  config.py  gui.py  orchestrator.py  policy.py
src/icloud_multi_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/icloud_multi_agent/agents/: __init__.py  auth_agent.py  backup_indexer.py  crypto_agent.py  download_manager.py  icloud_api_agent.py  integrity_log.py  report_agent.py  storage_manager.py
tests/: test_cloud_backup_urls.py
